--- a/Control_and_Loop_Statements.ipynb
+++ b/Control_and_Loop_Statements.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Control and Loop Statements.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbvLjq2OAC22S2sHcDDk87",
+      "authorship_tag": "ABX9TyM+/8MA7cCLHekPz/wRSU5E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TONrE6dWqZ5H",
-        "outputId": "685024aa-dbfe-4f23-8a89-f04a1fc1cfbb"
+        "outputId": "f33c09d2-5c2c-49bd-c2fa-e74dc5a11e92"
       },
       "outputs": [
         {
@@ -84,22 +84,10 @@
         "  print(\"a and b are equal\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KWkeH2wmq4es",
-        "outputId": "41850595-8c67-4b54-e602-257bf9cfdcdf"
+        "id": "KWkeH2wmq4es"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "a and b are equal\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -125,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2C9FlG21rKKx",
-        "outputId": "3bfb3685-d3f1-4d08-b5de-7da9128e5907"
+        "outputId": "bee674be-4b24-4b64-a121-a9f1310de8e9"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,9 +146,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ulktz0warqXD",
-        "outputId": "81f9a952-0168-4453-dbd5-1aaa75b84a8a"
+        "outputId": "b30bc6dc-c01c-4c8f-d3b1-7e8f9f3c9554"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,13 +171,25 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "if a>b: print(\"a is greater than b\")"
       ],
       "metadata": {
-        "id": "HXpl58OGr_1X"
+        "id": "HXpl58OGr_1X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "878662b5-dac9-4f27-d4e9-4a4e696143a3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is greater than b\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -216,7 +216,7 @@
         "id": "cAMNVYNtsapp",
         "outputId": "d0cb5382-d551-4fda-8495-97a218dac880"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +249,7 @@
         "id": "le95xtaNsuL7",
         "outputId": "e3decd97-7ecd-4521-cdf0-692a6002601a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +295,7 @@
         "id": "S-r6U16gtNrA",
         "outputId": "dd72ecb5-1a3b-43a5-cc8e-f3e2e41728d5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +337,7 @@
         "id": "7g4Z1hGeurkK",
         "outputId": "f9e4cf0f-53ef-41b9-ef0c-9013009a7e27"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
         "id": "GMMhM9tVvIly",
         "outputId": "5d15558d-9282-49cc-b0e1-0da00b8bb416"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,7 +415,7 @@
         "id": "L88pbZw4vr-z",
         "outputId": "d6eeaef9-7ac6-4e1e-b81e-5aa1bd7f9a81"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -450,7 +450,7 @@
         "id": "vqh5voQWw6Vu",
         "outputId": "867ee687-589b-4bbc-a992-878acf9fb534"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +491,7 @@
         "id": "qX1F1XItxSRS",
         "outputId": "54ae8173-d21f-46b6-9629-00ed519bf543"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,7 +529,7 @@
         "id": "P0KwTzQdxxrJ",
         "outputId": "1e877a2d-1d51-4876-a553-ef7ed0a98506"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +565,7 @@
         "id": "MG4sNxdcyBQC",
         "outputId": "befe7a85-07e8-4054-f025-b7e8b5bba580"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -598,7 +598,7 @@
         "id": "mG1AWMwiygvP",
         "outputId": "a14b337b-eab8-42b6-ae74-1d69db2a18bf"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +636,7 @@
         "id": "SJ2wlyrpyrWp",
         "outputId": "0472e22d-8e0f-49ee-e33f-6620b5045ff0"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -668,7 +668,7 @@
         "id": "u3fWrXnZzRvl",
         "outputId": "295d69b1-20c0-4420-80ab-baf9e62a9637"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,7 +707,7 @@
         "id": "ZKJjuqfszy3v",
         "outputId": "ce966745-3c79-40ed-d975-541305701264"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -720,15 +720,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##The break statement"
-      ],
-      "metadata": {
-        "id": "VjN9LnAKzN0f"
-      }
     }
   ]
 }
